test/badIndexReplacement2.slq

def main(){ /// error
	n:=3;
	x:=0:int[n];
	x[0]:=3; /// error
	return x;
}
